fix: remove horizontal scroll

--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,18 +2,8 @@
     display: flex;
     padding-top: 48px;
     flex-direction: column;
-    width: max(
-        928px, 
-        min(
-            984px,
-            calc(928px + 56 * ((100vw - 1024px) / 256))
-        ));
-    margin: auto;
+    max-width: 984px;
+    margin: 0 auto;
 }
 
-@media screen and (max-width: 932px) {
-    .lead {
-        width: 100%;
-    }
-}
 
